moved fetching of doctor id to controller layer when fetching appointments to make service layer more reusable